# zaptec-power

./: README.md  hacs.json  pyproject.toml
custom_components/zaptec_power/: __init__.py  const.py  manifest.json  sensor.py
tests/: test_init.py
